syntax = "proto3";

package report;

option go_package = "./proto";

service ReportService {
  rpc GenerateReport (ReportRequest) returns (ReportResponse);
  rpc HealthCheck (HealthRequest) returns (HealthResponse);
}

message ReportRequest {
  string user_id = 1;
}

message ReportResponse {
  string report_id = 1;
  string error = 2;
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
}
